--- a/toDoList.css
+++ b/toDoList.css
@@ -67,10 +67,10 @@
 
 .todolist {
 	width: 95%;
+	padding-left: 0;
 	list-style: none;
 	counter-reset: todos;
-	border: 1px solid black;
-	 overflow-y: scroll;
+	overflow-y: scroll;
 }
 
 .todolist li {
@@ -112,4 +112,5 @@
 .task-button-delete{
 	width: 5%;
 	border-radius: 2px;
+	background: url(button_delete.png);
 }
