--- a/toDoList.css
+++ b/toDoList.css
@@ -1,17 +1,10 @@
-.flex-container-column{
+.main-frame{
 	display: flex;
 	flex-flow: column wrap;
 	width: 50%;
-	margin: 15% 25%;
+	margin: 5% 25%;
 	padding: 1%;
 	border: 1px solid black;
-}
-
-.flex-container-row {
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: space-between;	
-	margin-top: 1%;
 }
 
 .heading {
@@ -24,6 +17,13 @@
   font-weight: normal;
   text-transform: uppercase;
   color: black;
+}
+
+.form{
+	display: flex;
+	flex-flow: row nowrap;
+	justify-content: space-between;	
+	margin-top: 1%;
 }
 
 .form-input{
@@ -39,13 +39,20 @@
 	border-radius: 2px;
 }
 
+.filters{
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-between;	
+	margin-top: 1%;
+}
+
 .priorityfilters{
 	width: 79%;
 	padding: 1%;
 }
 
 .datefilter-button-sort{
-	width: 20%;
+	width: 50%;
 }
 
 .datefilter{
@@ -75,7 +82,7 @@
 
 .todolist li {
 	flex: 1 1 auto;
-	margin: 1% 5%;
+	margin: 0% 5%;
 	padding: 5% 1%;
 }
 
@@ -87,25 +94,40 @@
 }
 
 .task{
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-between;	
 	border: 2px solid black;
 }
 
+.task-priority{
+	width: 8%;
+	border: 2px solid black;
+	margin: 1% 1%;
+	text-align: center;
+}
 .task-text{
-	width: 80%;
+	width: 60%;
+	margin: 1% 1%;
+	text-align: left;
 }
 
 .input{
-	width: 80%;
+	width: 60%;
 }
 
 .task-creation-date{
-	width: 40%;
-	margin: 0 3%;
+	width: 30%;
+	margin: 0% 5%;
+	margin-top: 5%;
+	text-align: left;
 }
 
 .task-result-date{
-	width: 40%;
-	margin: 0 5%;
+	width: 50%;
+	margin: 0% 1%;
+	margin-top: 5%;
+	text-align: right;
 }
 
 .task-button{
